--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1015,7 +1015,6 @@
 .mypage .progmg.allcare .jobact_inner_list.type_twin {flex-direction: column; align-items: initial; gap: 8px;}
 
 .mypage .progmg.allcare .jobact_inner_list.type_twin+.type_twin {margin-top: 16px;}
-.ipt_time_row {}
 .allcare .new_ipt.ipt_time_row .input_txt {width: calc(100% - 40px);}
 .allcare .new_ipt.ipt_time_row span {margin-left: 8px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
 
@@ -1057,5 +1056,23 @@
 /* 포인트관리_조회(보완요청) (UI_ADHPChS07)	*/
 
 /* 포인트관리_조회(승인, 미지급, 환급) (UI_ADHPChS08) */
-.allcare .box_end_wrap .btn_box button.full_btn {width: 100%;}
+.mypage .progmg.allcare .box_end_wrap .btn_box button.full_btn {width: 100%;}
+.mypage .progmg.allcare .allowance_info_wrap {margin-top: 24px; position: relative; background-color: #F5F6FA; padding: 16px 0;}
+.mypage .progmg.allcare .allowance_info_wrap+.allowance_info_wrap {margin-top: 16px;}
+.mypage .progmg.allcare .allowance_info_wrap::after {content: ''; display: block; z-index: -99; position: absolute; left: 50%; top: 0; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 100%; background-color: #f5f6fa;}
+.mypage .progmg.allcare .allowance_info_wrap .txt_nth {color: var(--col_blue);}
+.mypage .progmg.allcare .allowance_info_box {margin-top: 8px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul {border: 1px solid #eee; border-radius: 4px; background-color: #fff; padding: 16px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul+.allowance_info_ul {margin-top: 8px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li {padding: 8px 0; display: flex; gap: 12px; align-items: center; justify-content: space-between;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li+li {position: relative;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li+li::before { content: ""; position: absolute; top: 0; left: 0; right: 0; height: 1px; background-image: repeating-linear-gradient(to right, #eee 0 4px, transparent 4px 8px);}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li:first-child {padding-top: 0;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li:last-child {padding-bottom: 0;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li .td {font-size: 14px; color: #555; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li .dd {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_ul li .dd .txt_value {font-weight: 600; color: var(--col_blue);}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_twin {flex-wrap: wrap; gap: 4px;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_twin .td {width: 100%;}
+.mypage .progmg.allcare .allowance_info_box .allowance_info_twin .dd {width: 100%;}
 
