--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -4,13 +4,15 @@ fieldset { border: none;}
 .box_radio_group.flex_box { gap: 10px;}
 .box_radio_group.flex_box input[type="radio"] + label { display: flex; align-items: center;}
 
+.radio_group label { margin-left: 4px !important;}
 .radio_group input[type="radio"] {display: block; position: relative; width: 22px; height: 22px; margin-top: -2px; border: none; background-color: transparent; cursor: pointer; opacity: 1; appearance: none;}
 .radio_group input[type="radio"]::before {content: ''; position: absolute; left: 1px; top: 1px; width: 20px; height: 20px; background-color: #fff; border-radius: 50%; transition: border-color .2s, box-shadow .2s, background-color .5s; border: .0625rem solid var(--col_button);}
 .radio_group input[type="radio"]::after {content: ''; position: absolute; left: 50%; top: 50%; width: 10px; height: 10px; background-color: #fff; border-radius: 50%; transform: translate(-50%, -50%);}
 .radio_group input[type="radio"]:checked::before {border-color: var(--col_blue); background-color: var(--col_blue); box-shadow: 0 0 0 5px var(--col_blue) inset;}
 .radio_group input[type="radio"] + label {display: block; margin: -2px 0 0 4px;}
 .radio_group input[type="radio"] ~ input[type="radio"] {margin-left: 16px;}
-.radio_group label { margin-left: 4px !important;}
+.radio_group input[type="radio"]:disabled:checked::before { border-color: var(--col_button); background-color: var(--col_white); box-shadow: 0 0 0 5px var(--col_white) inset;}
+.radio_group input[type="radio"]:disabled:checked::after { background-color: #444;}
 
 /* Allcare 공통 */
 /* new_table : 테이블 padding 값 수정 */
