--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -1,6 +1,25 @@
 @charset "UTF-8";
 
+
+/* radio 관련 css 이전 (기존 temp.css 내용) */
+.radio_group {display: flex; align-items: center;}
+.radio_group input[type="radio"] {display: block; position: relative; width: 1.5rem; height: 1.5rem; margin-top: -0.125rem; border: none; cursor: pointer; opacity: 1; appearance: none;}
+.radio_group input[type="radio"]::before {content: ''; position: absolute; left: 0.125rem; top: 0.125rem; width: 1.25rem; height: 1.25rem; background-color: #fff; border-radius: 50%; transition: border-color .2s, box-shadow .2s background-color .5s; border: 1px solid var(--col_button);}
+.radio_group input[type="radio"]::after {content: ''; position: absolute; left: 50%; top: 50%; width: 0.5rem; height: 0.5rem; margin: -0.25rem 0 0 -0.25rem; background-color: #fff; border-radius: 50%;}
+.radio_group input[type="radio"]:checked::before {border-color: var(--col_blue); background-color: var(--col_blue); box-shadow: 0 0 0 0.3125rem var(--col_blue) inset;}
+.radio_group input[type="radio"] + label {display: block; margin: -0.125rem 0 0 0.25rem;}
+.radio_group input[type="radio"] ~ input[type="radio"] {margin-left: 1rem;}
+
+
+
 /* allcare 공통 */
+.allcare .radio_group {gap: 16px;}
+.allcare .radio_group .new_radio_item {display: flex; align-items: center;}
+.allcare .radio_group .new_radio_item label, .radio_group .new_radio_item .label_text {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.allcare .radio_group_twin {display: flex; flex-direction: column; align-items: flex-start; gap: 8px;}
+.allcare .radio_group:disabled input[type="radio"]:checked::after {left: 67.5%; top: 65%; width: 0.75rem; height: 0.75rem; background-color: #444; transform: translate(-50%, -50%);} 
+.allcare .radio_group:disabled input[type="radio"]:checked::before {background-color: #fff; box-shadow: none; border: 1px solid var(--col_button);}
+
 .allcare * {letter-spacing: -0.02em;}
 .allcare .btn.type01.fill {background-color: var(--col_blue); color: #fff; font-weight: 600;}
 .allcare .btn.semilarge {height: 40px; line-height: 40px;}
@@ -762,7 +781,7 @@
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box button span {position: relative; padding-right: 20px;}
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box button span::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: url('../images/mypage/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
 .mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.active {display: block;}
-.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.toggle_close::after {transform: translateY(-50%) rotate(180deg); }
+.mypage .progmg.allcare .toggle_wrap .toggle_btn_box button.toggle_close span::after {transform: translateY(-50%) rotate(180deg); }
 
 
 /* 점프업 - IAP관리_등록 (UI_ADHPCfS02) */
@@ -1002,7 +1021,7 @@
 .mypage .progmg.allcare .prechk_wrap .radio_etc p {margin-bottom: 4px;}
 .mypage .progmg.allcare .prechk_wrap .radio_etc .radio_input_item+.radio_input_item {margin-top: 8px;}
 .mypage .progmg.allcare .prechk_wrap .radio_etc .radio_input_item span {margin-left: 8px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
-.mypage .progmg.allcare .prechk_wrap .pay_input {width: calc(100% - 26px);}
+.mypage .progmg.allcare .prechk_wrap .pay_input {width: calc(100% - 26px); text-align: right; padding: 10px 16px;}
 .mypage .progmg.allcare .jobact_wrap .jobact_cont {margin-top: 12px; border: 1px solid #eee; border-radius: 4px; padding: 20px 16px;}
 .mypage .progmg.allcare .jobact_wrap .jobact_cont .jobact_hd {display: flex; justify-content: space-between; padding-bottom: 8px; border-bottom: 1px solid #eee;}
 .mypage .progmg.allcare .jobact_wrap .jobact_cont .jobact_hd p {font-size: 16px; color: #333; font-weight: 600; line-height: 24px;}
@@ -1012,12 +1031,13 @@
 .mypage .progmg.allcare .jobact_wrap .jobact_cont .jobact_hd .toggle_box .open_btn {background-image: url('../images/mypage/arrow16_down.svg');}
 .mypage .progmg.allcare .jobact_wrap .jobact_cont .jobact_inner_ul {margin-top: 8px; border: none; padding: 0;}
 .mypage .progmg.allcare .jobact_wrap .jobact_cont .jobact_inner_cont+.jobact_inner_cont {margin-top: 16px;}
-
 .mypage .progmg.allcare .jobact_inner_list.type_twin {flex-direction: column; align-items: initial; gap: 8px;}
-
 .mypage .progmg.allcare .jobact_inner_list.type_twin+.type_twin {margin-top: 16px;}
 .allcare .new_ipt.ipt_time_row .input_txt {width: calc(100% - 40px);}
 .allcare .new_ipt.ipt_time_row span {margin-left: 8px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
+.mypage .progmg.allcare .w_full {width: 100%; flex: 1;}
+.mypage .progmg.allcare .w_full .w_full>span {margin-left: 8px;}
+
 
 /* [팝업] 구직활동팝업 (UI_ADHPChP03) */
 .allcare .jobact_inner {padding: 0 20px;}
@@ -1076,4 +1096,6 @@
 .mypage .progmg.allcare .allowance_info_box .allowance_info_twin {flex-wrap: wrap; gap: 4px;}
 .mypage .progmg.allcare .allowance_info_box .allowance_info_twin .td {width: 100%;}
 .mypage .progmg.allcare .allowance_info_box .allowance_info_twin .dd {width: 100%;}
+.mypage .progmg.allcare .hd_btn_box .btn_all {border: 1px solid #757575; border-radius: 4px; padding: 4px 8px;}
+.mypage .progmg.allcare .hd_btn_box .btn_all span {font-size: 14px; color: #333; font-weight: 400; line-height: 24px;}
 
