--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -279,7 +279,7 @@
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dd_id input {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 32px 10px 16px; border: 1px solid #757575; border-radius: 4px; appearance: none; -webkit-appearance: none; -moz-appearance: none; background: url('../include/images/arrow16_down.svg') no-repeat center / contain; background-position:  right 12px center; background-size: 16px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down option:disabled {display: none;}
-.mypage .progmg.allcare .my_ptcp_from .agm_area .agm_box {margin-top: 8px;}
+.mypage .progmg.allcare .my_ptcp_from .agm_area .agm_box {margin-top: 8px; margin-bottom: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_desc {margin-top: 8px;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .agm_desc strong {font-size: 14px; font-weight: 400; line-height: 24px; color: #e0024b;}
 .mypage .progmg.allcare .my_ptcp_from .agm_area .btn_view_doc {margin-left: 4px; display: inline; width: 64px; height: 32px; border: 1px solid #757575; border-radius: 4px;} 
@@ -690,6 +690,13 @@
 /* 빌드업 - 경력개발로드맵_조회(변경신청후-회수) (UI_ADHPCdS07) */
 
 /* 점프업 - 참여신청서조회 (UI_ADHPCbM10) */
+.mypage .progmg.allcare .radio_group.radio_twin_type02 {display: flex; flex-direction: column; align-items: flex-start;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item {align-items: flex-start;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item input {margin-top: 3px;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item label {flex: 1;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item label span {display: block;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item label .label_title {font-size: 16px; color: #333; font-weight: 600; line-height: 24px;}
+.mypage .progmg.allcare .radio_group.radio_twin_type02 .new_radio_item label .label_text {font-size: 16px; color: #333; font-weight: 400; line-height: 24px;}
 
 /* 점프업 - 상담이력_목록 (UI_ADHPCcM02) */
 
